k8s/v1.37.1/clusters/nuc-k8s/vm/kubernetes-objects/virtualServiceKubernetes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vmagent-vs
  namespace: vm
spec:
  hosts:
    - vmagent.maifuj.com
  gateways:
    - istio-ingress/gateway-https
  http:
    - route:
        - destination:
            host: vmagent-vm-dev-victoria-metrics-k8s-stack.vm.svc.cluster.local
            port:
              number: 8429
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vmalert-vs
  namespace: vm
spec:
  hosts:
    - vmalert.maifuj.com
  gateways:
    - istio-ingress/gateway-https
  http:
    - route:
        - destination:
            host: vmalert-vm-dev-victoria-metrics-k8s-stack.vm.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-vs
  namespace: vm
spec:
  hosts:
    - alertmanager.maifuj.com
  gateways:
    - istio-ingress/gateway-https
  http:
    - route:
        - destination:
            host: vmalertmanager-vm-dev-victoria-metrics-k8s-stack.vm.svc.cluster.local
            port:
              number: 9093
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vmsingle-vs
  namespace: vm
spec:
  hosts:
    - vmsingle.maifuj.com
  gateways:
    - istio-ingress/gateway-https
  http:
    - route:
        - destination:
            host: vmsingle-vm-dev-victoria-metrics-k8s-stack.vm.svc.cluster.local
            port:
              number: 8428
